# cargo-shipit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  example-shipit.json
src/: cli.rs  lib.rs  main.rs
