[package]
name = "cargo-shipit"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand for building and deploying Rust binaries to Linux targets via SSH. Ship it!"
authors = ["Maxime Pointet <maxime@maxime-pointet.fr>"]
repository = "https://github.com/PixmaNts/cargo-shipit"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cargo", "ssh", "deploy", "linux", "cross-compile"]
categories = ["development-tools::cargo-plugins", "network-programming"]
homepage = "https://github.com/PixmaNts/cargo-shipit"
rust-version = "1.70"
exclude = [
    "newer_source/*",
    "*.json",
    ".vscode/*"
]

[[bin]]
name = "cargo-shipit"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"